add search feature to app

--- a/movie_generator.ipynb
+++ b/movie_generator.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryanb\\Anaconda\\lib\\site-packages\\numpy\\core\\__init__.py:29: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\ryanb\\Anaconda\\lib\\site-packages\\numpy\\.libs\\libopenblas.IPBC74C7KURV7CB2PKT5Z5FNR3SIBV4J.gfortran-win_amd64.dll\n",
+      "C:\\Users\\ryanb\\Anaconda\\lib\\site-packages\\numpy\\.libs\\libopenblas.TXA6YQSD3GCQQC22GEQ54J2UDCXDXHWN.gfortran-win_amd64.dll\n",
+      "  stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "#movies = pd.read_csv('movies_data.csv')\n",
@@ -239,10 +250,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'url2': 'https://www.google.com.tr/search?q=incredibles movie quotes',\n",
+       " 'title': 'incredibles',\n",
+       " 'all_quotes': [{'info': \"\\n\\n\\nHelen Parr / Elastigirl:\\nEveryone is special, Dash.\\n\\n\\nDash Parr:\\nThat's just another way of saying no one is.\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nLucius Best / Frozone:\\nHoney, where's my super suit?\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nLucius Best / Frozone:\\nHoney? \\n\\n\\nMuriel Hogenson:\\nWhat?\\n\\n\\nLucius Best / Frozone:\\nWhere's my super suit? \\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nMirage:\\nIf you want to bet on something, bet on your own life!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nSyndrome:\\nMy name's not Buddy!\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nHelen Parr / Elastigirl:\\nI think you need to be a bit more flexible.\\n\\n\\n\\n'},\n",
+       "  {'info': '\\n\\n\\nSyndrome:\\nOh, ho ho! You sly dog! You got me monologuing!\\n\\n\\n\\n'},\n",
+       "  {'info': '\\n\\n\\nViolet Parr:\\nWe act normal, mom! I want to \"be\" normal! The only normal one is Jack-Jack, and he\\'s not even toilet trained! \\n\\n\\nViolet Parr:\\nWe act normal, mom! I want to \\'be\\' normal! The only normal one is Jack-Jack, and he\\'s not even toilet trained! \\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nBob Parr / Mr. Incredible:\\n[whispering] Listen closely. I'd like to help you but I can't. I'd like to tell you to take a copy of your policy to Norma Wilcox on... Norma Wilcox, W-I-L-C-O-X... on the third floor, but I can't. \\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nBob Parr / Mr. Incredible:\\nDid you get away with it?\\n\\n\\nBob Parr/Mr. Incredible:\\nDid you get away with it?\\n\\n\\nHelen Parr / Elastigirl:\\nDon't incourage him! \\n\\n\\nHelen Parr/Elastigirl:\\nDon't incourage him! \\n\\n\\nBob Parr / Mr. Incredible:\\nI'm not incoraging him, I'm just wondering if he got away with it\\n\\n\\nBob Parr / Mr. Incredible:\\nI'm not incoraging him, I'm just wondering if he got away with it.\\n\\n\\nBob Parr/Mr. Incredible:\\nI'm not encouraging him, I'm just wondering if he got away with it.\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nDash Parr:\\nNo force feilds!\\n\\n\\nViolet Parr:\\nYou started it\\n\\n\\nViolet Parr:\\nYou started it!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nGilbert Huph:\\nI'm not happy Bob, not happy.\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nSyndrome:\\nAnd after all. I am your Number 1 fan.\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nSyndrome:\\nAnd when everyone's super, (Evil Laugh) no-one will be.\\n\\n\\nSyndrome:\\nAnd when everyone's super, [evil Laugh] no-one will be.\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\nEdna Mode: (to security panel) Edna Mode. (turret points at Elastigirl) And guest.\\n\\n\\n\\nEdna Mode:\\n[to security panel] Edna Mode. [turret points at Elastigirl] And guest.\\n\\n\\n\\n\\n'},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\n(to security panel) Edna Mode. (turret points at Elastigirl) And guest.\\n\\n\\nEdna Mode:\\n[to security panel] Edna Mode. [turret points at Elastigirl] And guest.\\n\\n\\n\\n'},\n",
+       "  {'info': '\\n\\n\\nSyndrome:\\nYou sly dog! You caught me monologuing!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nEdna Mode:\\nWhat is it? Who are you, what do you want?\\n\\n\\nBob Parr / Mr. Incredible:\\n(Pulls down sunglasses to show it's him).\\n\\n\\nBob Parr / Mr. Incredible:\\n[pulls down sunglasses to show it's him]\\n\\n\\nEdna Mode:\\nMy god you've gotten fat! Come in! Come, come!\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nDash Parr:\\nHow are you doing that?!\\n\\n\\nDash Parr:\\nHow are you doing that?\\n\\n\\nViolet Parr:\\nI don't know!\\n\\n\\nDash Parr:\\nWell, whatever you do, DON'T STOP!\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nGilbert Huph:\\nWhat I can't handle is your customers' inexplicable knowledge of Insuricare inner workings. There experts, experts, Bob! Exploiting every loophole, dodging every obstacle. They're penetrating the bureaucracy!\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nLucius Best / Frozone:\\nJust like old times, huh Bob? \\n\\n\\nBob Parr / Mr. Incredible:\\n[slapping Lucius in the back] Just like old times.\\n\\n\\nLucius Best / Frozone:\\nHa-ha, yeah. Hurt then, too. Ow. \\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nBob Parr / Mr. Incredible:\\nBuddy?\\n\\n\\nSyndrome:\\nMy name's NOT BUDDY! [attacking Bob] AND it's not Incredi-boy either!\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nLucius Best / Frozone:\\nHoney, Where's my Supersuit?\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\nPull-yourself-together! \"What will you do?\" Is this a question? You will show him you remember that he is Mr. Incredible, and you will remind him who you are. Well, you know where he is. Go, confront the problem. Fight! Win! [normal voice] And call me when you get back, darling. I enjoy our visits. \\n\\n\\nEdna Mode:\\nPull-yourself-together! \\'What will you do?\\' Is this a question? You will show him you remember that he is Mr. Incredible, and you will remind him who you are. Well, you know where he is. Go, confront the problem. Fight! Win! [normal voice] And call me when you get back, darling. I enjoy our visits. \\n\\n\\n\\n'},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\nNo capes!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nEdna Mode:\\nThis is a hobo suit, darling. You can't be seen in this. I won't allow it. Fifteen years ago, maybe, but now? Feh! \\n\\n\\nBob Parr / Mr. Incredible:\\nWait, what do you mean? You designed it. \\n\\n\\nEdna Mode:\\nI never look back, darling! It distracts from the now. \\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nEdna Mode:\\nI cut it a little roomy for the free movement, the fabric is comfortable for sensitive skin... [a sheet of flame erupts in front of the suit] And it can also withstand a temperature of over 1000 degrees. Completely bulletproof... [four heavy machine guns appear and open fire on the suit, without effect] And machine washable, darling. That's a new feature. \\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\nSupermodels. Heh! Nothing super about them... spoiled, stupid little stick figures with poofy lips who think only about themselves. \\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nLucius Best / Frozone:\\nHoney, where's my supersuit?\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nBob Parr / Mr. Incredible:\\n[Stretches] It's showtime.\\n\\n\\nBob Parr / Mr. Incredible:\\n[stretches] It's showtime.\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nHelen Parr / Elastigirl:\\nCutting it kinda close, don't you think?\\n\\n\\nHelen Parr / Elastigirl:\\nCutting it kinda close, don't ya think? \\n\\n\\nBob Parr / Mr. Incredible:\\nWell, you need to be more...flexible.\\n\\n\\nBob Parr / Mr. Incredible:\\nYou need to be more... flexible. \\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nHelen Parr / Elastigirl:\\nYou're late. When you asked me if I was doing anything later, I didn't realize you had forgotten. I thought it was playful banter.\\n\\n\\nHelen Parr / Elastigirl:\\nYou're late. When you asked me if I was doing anything later, I didn't realize you'd actually forgotten. I thought it was playful banter.\\n\\n\\nBob Parr / Mr. Incredible:\\nIt was playful banter.\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nMirage:\\nNext time you gamble, bet your own life!\\n\\n\\nMirage:\\n[through her teeth] Next time you gamble, bet *your own* life.\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nBob Parr / Mr. Incredible:\\nWait. I bet Syndrome's changed the password by now. How do I get into his computers?\\n\\n\\nMirage:\\n[over microphone] Say please.\\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nEdna Mode:\\nYes, words are useless! Gobble, gobble, gobble...too much, darling, too much! That is why I show you my work, that is why you are HERE!\\n\\n\\nEdna Mode:\\nYes, words are useless! Gobble-gobble-gobble-gobble-gobble! Too much of it, darling, too much! That is why I show you my work! That is why you are here!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nLucius Best / Frozone:\\nIt means it's hot! And I've dehydrated, Bob! What's your excuse, you run out of muscle?!\\n\\n\\nBob Parr / Mr. Incredible:\\nI can't just go smashing through walls, the building's getting weaker by the second, it's gonna come down on top of us!\\n\\n\\nLucius Best / Frozone:\\nI wanted to go bowling!\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nEdna Mode:\\nYou can't! It's impossible! I'm far too busy, so ask me now before I again become sane.\\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nViolet Parr:\\nBut you said we weren't supposed to use our powers.\\n\\n\\nViolet Parr:\\nBut you said never to use... \\n\\n\\nHelen Parr / Elastigirl:\\nI KNOW WHAT I SAID! Listen to what I'm saying now!\\n\\n\\nHelen Parr / Elastigirl:\\nI know what I said! [sighing] Remember the bad guys on the shows you used to watch on Saturday mornings? Well, these guys aren't like those guys. They won't exercise restraint because you are children. They *will* kill you if they get the chance. Do *not* give them that chance. \\n\\n\\n\\n\"},\n",
+       "  {'info': \"\\n\\n\\nHelen Parr / Elastigirl:\\nRemember the bad guys on those shows you used to watch on Saturday mornings? Well, these guys are not like those guys. They won't exercise restraint because your children. They will kill you if they get the chance. Do not give them that chance. \\n\\n\\nHelen Parr / Elastigirl:\\nRemember the bad guys on the shows you used to watch on Saturday mornings? Well, these guys aren't like those guys. They won't exercise restraint because you are children. They *will* kill you if they get the chance. Do *not* give them that chance. \\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nSyndrome:\\nI am Syndrome, your nemesis!\\n\\n\\n\\n'},\n",
+       "  {'info': \"\\n\\n\\nThe Underminer:\\nBehold, the Underminer! I'm always beneath you, but nothing is beneath me! I hereby declare war on peace and happiness! Soon, all will tremble before me! \\n\\n\\n\\n\"},\n",
+       "  {'info': '\\n\\n\\nBob Parr / Mr. Incredible:\\nNo matter how many times you save the world, it always manages to get back in jeopardy again. Sometimes I just want it to stay saved! You know, for a little bit? I feel like the maid; I just cleaned up this mess! Can we keep it clean for... for ten minutes! \\n\\n\\n\\n'}]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title = \"incredibles\"\n",
+    "\n",
+    "def selected_movie(title):\n",
+    "    term = title.replace(\" \" or \":\", \"_\")\n",
+    "    url = \"https://www.rottentomatoes.com/m/\" + term + \"/quotes/\"\n",
+    "    url2 = \"https://www.google.com.tr/search?q={}\".format(title) +\" movie quotes\"\n",
+    "    # Get the html from a request to the url\n",
+    "    response = requests.get(url)\n",
+    "    html = response.text\n",
+    "    # Convert the html into a BeautifulSoup object\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    # Get all info from the specified .find_all() location\n",
+    "    quotes = soup.find_all('li', class_='quote_item')\n",
+    "    all_quotes = []\n",
+    "    for quote in quotes:\n",
+    "        info = quote.text\n",
+    "        info_dict = {'info': info}\n",
+    "        all_quotes.append(info_dict)\n",
+    "        # Return links as a dictionary value \n",
+    "    return {\n",
+    "        'url2': url2, \n",
+    "        'title': title, \n",
+    "        'all_quotes': all_quotes\n",
+    "    }\n",
+    "\n",
+    "selected_movie(title)"
+   ]
   },
   {
    "cell_type": "code",
