fix bug in header

--- a/movie_generator.ipynb
+++ b/movie_generator.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'\\n\\n\\nConan:\\nWarlord: \"What is best in life?\" \\nConan: \"To crush your enemies, to see them driven before you, and to hear the lamentations of their women.\" \\n\\n\\n\\nConan:\\nTo crush your enemies, to see them driven before you, and to hear the lamentations of their women. \\n\\n\\n\\nMongol General:\\nWhat is best in life? \\n\\n\\n\\nConan:\\nTo crush your enemies, see them driven before you, and to hear the lamentation of their women. \\n\\n\\n\\n'}\n"
+      "{\"\\n\\n\\nCapa:\\nSo if you wake up one morning and it's a particularly beautiful day, you'll know we made it. Okay, I'm signing out. \\n\\n\\n\\n\"}\n"
      ]
     }
    ],
